--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="banner">
         <img src="assets/banner.jpg" alt="Conference Template Banner">
         <div class="top-left">
-            <span class="title1">Conference</span><span class="title2">Template</span> <span class="year">2525</span>
+            <span class="title1">Workshop on the Future Role of Haptics in Smart Assistant Technologies</span>
         </div>
         <div class="bottom-right">
             June 31, 2525 <br> University Name, and City Maybe
