--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <base href=".">
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
     <link rel="stylesheet" type="text/css" media="all" href="assets/main.css"/>
-    <meta name="description" content="Conference Template">
+    <meta name="description" content="Haptic Smart Assistants Workshop 2022">
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
-    <meta name="KeyWords" content="Conference">
-    <title>Conference Template</title>
+    <meta name="KeyWords" content="Workshop">
+    <title>Haptic Smart Assistants Workshop 2022</title>
 </head>
 
 <body>
