--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <div class="top-left">
             <span class="title1">Workshop on the Future</span>
         </div>
+        <div class="top-left">
+            <span class="title1">Role of Haptics in Smart</span>
+        </div>
         <div class="bottom-right">
             June 31, 2525 <br> University Name, and City Maybe
         </div>
