--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
     <div class="banner">
         <img src="assets/banner.jpg" alt="Conference Template Banner">
         <div class="top-left">
-            <span class="title1">Workshop on the Future</span>
-        </div>
-        <div class="top-left">
-            <span class="title1">Role of Haptics in Smart</span>
+            <span class="title1">Workshop on the Future Role of Haptics in Smart Assistant Technologies</span>
         </div>
         <div class="bottom-right">
             June 31, 2525 <br> University Name, and City Maybe
