--- a/index.html
+++ b/index.html
@@ -24,33 +24,9 @@
         </div>
     </div>
 
-    <table class="navigation">
-        <tr>
-            <td class="navigation">
-                <a class="current" title="Conference Home Page" href=".">Home</a>
-            </td>
-            <td class="navigation">
-                <a title="Register for the Conference" href="registration">Registration</a>
-            </td>
-            <td class="navigation">
-                <a title="Conference Program" href="program">Program</a> 
-            </td>
-            <td class="navigation">
-                <a title="Directions to the Conference" href="directions">Directions</a>
-            </td>
-            <td class="navigation">
-                <a title="Conference Flyer" href="flyer">Flyer</a>
-            </td>
-        </tr>
-    </table>
-
     <h2>What is This Website?</h2>
     <p>
-        This website is a template that you could use for a (small) academic conference. 
-        It&rsquo;s got a page for registration, where you can embed a Google Form or some other way for participants to register.
-        It&rsquo;s got a program page to list the schedule for the conference.
-        It&rsquo;s got a directions page to add a bunch of instructions how to get to the conference.
-        It&rsquo;s got a page to put up the flyers and other promotional materials for folks to download.
+Despite their widespread adoption, smart assistant technologies have not evolved significantly in the last decade from an interaction perspective. Indeed, a user explicitly formulates a request, today using their voice, and the system attempts to respond to the user’s demand. We believe that haptics have the potential to drastically shift how we interact with smart assistant technologies by offering rich, private and social interaction opportunities. In this workshop, we aim to bring together experts from both auditory and haptic interaction design to 1) exchange on how the subtleties of haptics could be employed to address limitations of speech-based smart assistant technologies, and 2) collaboratively imagine what it would mean to live with a general purpose purely haptic smart assistant. Through a series of short presentations and interactive explorations of these two core topics, we hope to build a unifying research agenda, share ongoing work and most importantly encourage collaborations in this nascent research space.
     </p>
     <p>
         You can use this template by cloning all the files from this
