--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@ Despite their widespread adoption, smart assistant technologies have not evolved
         Through a series of short presentations and interactive explorations of these two core topics, we hope to build a unifying research agenda, share ongoing work and most importantly encourage collaborations in this nascent research space.
     </p>
     
-    <h2>Is this an event for me?</h2>
+    <h3>Is this an event for me?</h2>
     <p>
-    Absolutely! Exploring the voice- to purely haptic-driven smart assistant interactions spectrum, we believe this workshop will offer all HAID attendees the opportunity to contribute meaningfully and most importantly learn from each other's expertise. 
+    Absolutely! Spanning spectrum of voice- to purely haptic-driven smart assistant interactions, we believe this workshop will offer all HAID attendees the opportunity to contribute meaningfully and most importantly learn from each other's expertise. 
     </p>
     
     <h2>Program</h2>
