--- a/index.html
+++ b/index.html
@@ -26,11 +26,15 @@
 
     <h2>What is This Workshop About?</h2>
     <p>
-Despite their widespread adoption, smart assistant technologies have not evolved significantly in the last decade from an interaction perspective. Indeed, a user explicitly formulates a request, today using their voice, and the system attempts to respond to the user’s demand. We believe that haptics have the potential to drastically shift how we interact with smart assistant technologies by offering rich, private and social interaction opportunities. 
+Despite their widespread adoption, commercial smart assistant technologies have not evolved significantly in the last decade from an interaction perspective. Indeed, a user explicitly formulates a request, today using their voice, and the system attempts to respond to the user’s demand. We believe that haptics have the potential to drastically shift how we interact with smart assistant technologies by offering rich, private and social interaction opportunities. 
     </p>
     <p>
-        In this virtual workshop, we aim to bring together experts from both auditory and haptic interaction design to 1) exchange on how the subtleties of haptics could be employed to augment or address limitations of speech-based smart assistant technologies, and 2) collaboratively imagine what it would mean to live with a general purpose purely haptic smart assistant. 
+        In this virtual workshop, we aim to bring together experts from both auditory and haptic interaction design to: 
     </p>
+    <ol><li> exchange on how the subtleties of haptics could be employed to augment or address limitations of speech-based smart assistant technologies,</li>
+	    <li> and 2) collaboratively imagine what it would mean to live with a general purpose purely haptic smart assistant. </li>
+    </ol>
+
     <p>
         Through a series of short presentations and interactive explorations of these two core topics, we hope to build a unifying research agenda, share ongoing work and most importantly encourage collaborations in this nascent research space.
     </p>
