--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Despite their widespread adoption, commercial smart assistant technologies have 
                 TBD
             </td>
             <td class="title-special">
-                Introduction &amp; Tea!
+                Introduction
             </td>
         </tr>
     </table>
@@ -138,33 +138,18 @@ Despite their widespread adoption, commercial smart assistant technologies have 
 
     <h3>Organizers</h3>
     <p>
-        Here&rsquo;s a good place to list the organizers and sponsors of the conference,
-        as well as list contact information for the organizers,
-        and show off the logos of the sponsors.
-        It looks like his conference was sponsored by kittens!
+        Pascal E. Fortin, Postdoctoral Researcher - Haptic User Experience Group, École de Technologie Supérieure, Montreal, Canada.
     </p>
-    <table class="sponsors">
-        <tr>
-            <td class="sponsor">
-                <a href="http://www.eyebleach.me/">
-                    <img src="assets/kitten1.jpg" alt="First Sponsor Name">
-                </a>
-            </td>
-            <td class="sponsor">
-                <a href="http://www.eyebleach.me/">
-                    <img src="assets/kitten2.jpg" alt="Second Sponsor Name" style="width: 80%">
-                </a>
-            </td>
-            <td class="sponsor">
-                <a href="http://www.eyebleach.me/">
-                    <img src="assets/kitten3.jpg" alt="Third Sponsor Name">
-                </a>
-            </td>
-        </tr>
-    </table>
+    <p>
+        Vincent Levesque, Professor - Haptic User Experience Group, École de Technologie Supérieure, Montreal, Canada.
+    </p>
+    <p>
+        Christian Frisson, Researcher and Developper - SAT Metalab, Montreal, Canada.
+    </p>
+	
 
     <footer>
-        &copy; Conference Organizers
+        &copy; Pascal E. Fortin, Vincent Levesque, Christian Frisson
         &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
     </footer>
 
