--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <span class="title1">The Future Role of Haptics in Smart Assistant Technologies</span>
         </div>
         <div class="bottom-right">
-            June 31, 2525 <br> University Name, and City Maybe
+            August 24, 2022 <br> Virtual
         </div>
     </div>
 
