--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@ Despite their widespread adoption, commercial smart assistant technologies have 
     <p>
         Through two keynote presentations and interactive explorations of these core topics, we hope to build a unifying research agenda, share ongoing work and most importantly encourage collaborations in this nascent research space.
     </p>
+	
+    <p>
+        This workshop is part of the <a href=https://haid2022.qmul.ac.uk/>HAID 2022 technical program</a>.
+    </p>
     
     <h3> Keynote Speakers</h3>
 	<h4> Prof. Pedro Lopes, PhD - Assistant Professor at the University of Chicago </h4>
