--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Despite their widespread adoption, commercial smart assistant technologies have 
     </p>
 	
     <p>
-        This workshop is part of the <a href=https://haid2022.qmul.ac.uk/>HAID 2022 technical program</a>.
+        This workshop is part of the <a href=https://haid2022.qmul.ac.uk/>11th International Workshop on Haptic & Audio Interaction Design (HAID 2022)</a>.
     </p>
     
     <h3> Keynote Speakers</h3>
