--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ We believe that these bodily-integrated devices are the natural succession to we
                 TBD
             </td>
             <td class="title">
-                Keynote Presentation 1 - Title to be determined 
+                Keynote Presentation 1 - Integrating interactive devices with the user’s body
             </td>
         </tr>
         <tr>
