--- a/index.html
+++ b/index.html
@@ -39,12 +39,18 @@ Despite their widespread adoption, commercial smart assistant technologies have 
     
     <h3> Keynote Speakers</h3>
 	<h4> Prof. Pedro Lopes, PhD - Assistant Professor at the University of Chicago </h4>
-	<p>
-		The main question that drives my research is: what is the next interface paradigm that supersedes wearable devices? I argue that the new paradigm is one in which interactive devices will integrate with the user’s biological senses and actuators.
+
+<div>
+<div style="float: left">
+<img src="https://loremflickr.com/320/240" />
+</div>
+<div>
+he main question that drives my research is: what is the next interface paradigm that supersedes wearable devices? I argue that the new paradigm is one in which interactive devices will integrate with the user’s biological senses and actuators.
 This way of engineering devices that intentionally borrow parts of the user’s biology puts forward a new generation of miniaturized devices; allowing us to circumvent traditional physical constraints. For instance, in the case of our devices based on electrical muscle stimulation, they demonstrate how our body-device integration circumvents the constraints imposed by the ratio of electrical power and size of a motor. Taking this further, we demonstrate how our body-device integration approach allowed us to also miniaturize thermal feedback (hot/cold sensations) without the need for power-hungry thermal devices. 
 We believe that these bodily-integrated devices are the natural succession to wearable interfaces and allow us to investigate how interfaces might connect to our bodies in a more direct and personal way.
+</div>
+</div>
 
-	</p>
 
 	<h4> TBD </h4>
 	
