--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="banner">
         <img src="assets/banner.jpg" alt="Conference Template Banner">
         <div class="bottom-right">
-            August 24, 2022 <br> Virtual
+            August 25, 2022, 13:00-15:00 (UTC/GMT+1) <br> Virtual
         </div>
     </div>
 
