--- a/index.html
+++ b/index.html
@@ -50,21 +50,20 @@ This way of engineering devices that intentionally borrow parts of the user’s 
 We believe that these bodily-integrated devices are the natural succession to wearable interfaces and allow us to investigate how interfaces might connect to our bodies in a more direct and personal way.
 </div>
 
-
-    <h3>Anticipated Outcomes</h3>
-    <p>
-    We are planning to synthesize the emerging themes and discussions of this workshop into a collective paper. This event might furthermore become the first of a series of workshops on the theme of haptics and smart assistant technologies.
-    </p>	
+    <h3>What type of workshop is this?</h3>
 	
-    <h3>Is this an event for me and how can I participate?</h3>
-    <p>
-    Absolutely! Spanning the spectrum of voice- to purely haptic-driven smart assistant interactions, we believe this workshop will offer all HAID attendees the opportunity to contribute meaningfully and most importantly learn from each other's expertise.
-    </p>
+    <p>The structure of this workshop is heavily inspired by speculative design practices. Following a brief introduction and keynote presentations, all workshop participants will be invited to actively contribute to brainstorming and discussion activities aimed at sharing, learning, synthesizing and more generally broadening our perspectives around the topic of voice- and haptic-based smart assistant interactions. This may include sharing and organizing ideas on a virtual collaborative tool such as Miro.</p>
+    <p>Spanning the spectrum of voice- to purely haptic-driven smart assistant interactions, we believe this workshop will offer all HAID attendees the opportunity to contribute meaningfully and most importantly learn from each other's expertise.</p>
 	
+    <h3>How can I participate?</h3>
     <p>
     Let us know you are interested in joining us using this <a href=https://forms.gle/9Se6RjZnS3sMHqgu5>form</a> and we will contact you with the details as the event approaches. 
     </p>
 	
+    <h3>Anticipated Outcomes</h3>
+    <p>
+    We are planning to synthesize the emerging themes and discussions of this workshop into a collective paper. This event might furthermore become the first of a series of workshops on the theme of haptics and smart assistant technologies.
+    </p>	
     
     
     <h3>Program</h3>
