--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Despite their widespread adoption, commercial smart assistant technologies have 
     </p>
 
     <p>
-        Through two keynote presentations and interactive explorations of these core topics, we hope to build a unifying research agenda, share ongoing work and most importantly encourage collaborations in this nascent research space.
+        Through our keynote presentation and interactive explorations of these core topics, we hope to build a unifying research agenda, share ongoing work and most importantly encourage collaborations in this nascent research space.
     </p>
 	
     <p>
