--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Despite their widespread adoption, commercial smart assistant technologies have 
         This workshop is part of the <a href=https://haid2022.qmul.ac.uk/>11th International Workshop on Haptic & Audio Interaction Design (HAID 2022)</a>. As such, all workshop participants must also be registered to HAID 2022.
     </p>
     
-    <h3> Keynote Speakers</h3>
+    <h3> Keynote Speaker</h3>
 	<h4> Prof. Pedro Lopes, PhD - Assistant Professor at the University of Chicago </h4>
 
 <div>
@@ -86,7 +86,7 @@ We believe that these bodily-integrated devices are the natural succession to we
                 13:10
             </td>
             <td class="title">
-                Keynote Presentation 1 - Integrating interactive devices with the user’s body
+                Keynote Presentation - Integrating interactive devices with the user’s body
             </td>
         </tr>
         <tr>
@@ -102,7 +102,7 @@ We believe that these bodily-integrated devices are the natural succession to we
                 13:45
             </td>
             <td class="title">
-                Breakout Session 1 - How can haptics be used to augment voice interactions?
+                Brainstorming Session - How can haptics be used to augment voice interactions with smart assistants?
             </td>
         </tr>
     </table>
@@ -113,7 +113,7 @@ We believe that these bodily-integrated devices are the natural succession to we
                 14:15
             </td>
             <td class="title">
-                Breakout Session 2 - Imagining living with a purely haptic smart assistant
+                Brainstorming Session - Imagining living with a purely haptic smart assistant
             </td>
         </tr>
     </table>
